force-app/main/default/objects/ModuleClass__c/ModuleClass__c.object-meta.xml
<CustomObject>
    <description>This object is part of the org management unlocked package. It is used to keep track of the different classes related to a module.</description>
    <label>Module Class</label>
    <nameField>
        <label>Module Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Module Classes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>