force-app/main/default/objects/ModuleClass__c/fields/DTCModule__c.field-meta.xml
<CustomField>
    <fullName>DTCModule__c</fullName>
    <description>The DTC Module that contains this class.</description>
    <inlineHelpText>The DTC Module that contains this class</inlineHelpText>
    <label>DTC Module</label>
    <referenceTo>DTCModule__c</referenceTo>
    <relationshipLabel>Module Classes</relationshipLabel>
    <relationshipName>Module_Classes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>