force-app/main/default/objects/ModuleClass__c/fields/IsPassing__c.field-meta.xml
<CustomField>
    <fullName>IsPassing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this test class passing?</description>
    <inlineHelpText>Did all methods in this class pass on its last test run?</inlineHelpText>
    <label>Is Passing</label>
    <type>Checkbox</type>
</CustomField>