force-app/main/default/objects/ModuleClass__c/fields/IsTest__c.field-meta.xml
<CustomField>
    <fullName>IsTest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this a test class or a production code class?</description>
    <inlineHelpText>Checked = test class. Unchecked = production code class.</inlineHelpText>
    <label>Is Test</label>
    <type>Checkbox</type>
</CustomField>