force-app/main/default/objects/ModuleClass__c/fields/Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>Unique_Name__c</fullName>
    <description>For most orgs, this is Class Name. For VAPM with multi-org extension, this will include the Org Name.</description>
    <externalId>true</externalId>
    <inlineHelpText>(Org Name) ClassName - this is a unique field</inlineHelpText>
    <label>Unique Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>